<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
        android:id="@+id/nav_crear"
        android:icon="@drawable/agrega"
        android:title="@string/menu_crear" />

        <item
            android:id="@+id/nav_consultar"
            android:icon="@drawable/ic_menu_consultar"
            android:title="@string/menu_consultar" />

        <item
            android:id="@+id/nav_editar"
            android:icon="@drawable/editar"
            android:title="@string/menu_editar" />

        <item
            android:id="@+id/nav_eliminar"
            android:icon="@drawable/borrar"
            android:title="@string/menu_eliminar" />

        <item
            android:id="@+id/nav_listar"
            android:icon="@drawable/listar"
            android:title="@string/menu_listar" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_creditos"
                android:icon="@drawable/creditos"
                android:title="@string/menu_creditos" />
        </menu>
    </item>

</menu>
