<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/crear_tv_nuevoregistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/crear_titulo"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/crear_iv_foto"
                android:layout_width="105dp"
                android:layout_height="102dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/camara" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Información básica"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crear_et_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/input_apellidos"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crear_et_nombres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/input_nombres"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/crear_et_fecha_nacimiento"
                        android:layout_width="234dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/input_fecha_de_nacimiento"
                        android:inputType="date" />

                    <Button
                        android:id="@+id/crear_btn_fecha_nacimiento"
                        android:layout_width="42dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:drawable/ic_menu_my_calendar" />

                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/crear_sp_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:entries="@array/sexo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Domicilio"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/crear_sp_estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/estados" />
                <Spinner
                    android:id="@+id/crear_sp_municipio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/o0" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/crear_layout_map">
                <com.google.android.gms.maps.MapView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/crear_mv_map"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/crear_sp_seccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/o0"/>
                <Spinner
                    android:id="@+id/crear_sp_localidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/o0"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Calle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crear_et_calle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_numero_interior">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/crear_et_numInt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_numero_exterior">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/crear_et_numExt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_colonia">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/crear_et_colonia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_codigo_postal">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/crear_et_codigo_postal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Información electoral"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crear_et_clave_electoral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_clave_electoral" />

            </com.google.android.material.textfield.TextInputLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/crear_et_curp"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/input_curp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/crear_btn_generar_curp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Generar\nCURP"
                />

            </GridLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/input_anio_registro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crear_et_anio_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_anio_emision">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/crear_et_anio_emision"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_vigencia">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/crear_et_vigencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/crear_btn_limpiar"
                    android:text="@string/action_limpiar" />

                <Button
                    android:id="@+id/crear_btn_guardar"
                    android:text="@string/action_guardar" />
            </GridLayout>

            <TextView
                android:id="@+id/crear_tv_espacioblanco"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text=" " />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>